--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
 openvpn:
-  image: haugene/transmission-openvpn
+  image: markusmcnugen/qbittorrentvpn
   privileged: true
   ports:
     - "9091:9091"
   volumes:
     - /etc/localtime:/etc/localtime:ro
-    - /your/storage/path/:/data
+    - /your/config/path/:/config
+    - /your/downloads/path/:/downloads
   environment:
-    OPENVPN_PROVIDER: PIA
     OPENVPN_USERNAME: username
     OPENVPN_PASSWORD: password
-
-
-nginx:
-  image: library/nginx
-  ports:
-     - "8080:8080"
-  volumes:
-    - /etc/localtime:/etc/localtime:ro
-    - /path/to/nginx.conf:/etc/nginx/nginx.conf:ro
+    PUID: UID
+    PGID: GID
